--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,18 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.9
+Date: 07. 02. 2026
+  Features:
+    - Added Space Age support for rocket turrets and tesla turrets
+    - Rocket turrets now have 5 levels of range research
+    - Tesla turrets now have 5 levels of range research
+    - Rocket turret variants receive bonuses from stronger-explosives damage research
+    - Tesla turret variants receive bonuses from energy-weapons-damage research
+  Bugfixes:
+    - Fixed unknown entity names appearing in damage research technology tooltips for all turret variants
+  Changes:
+    - Added entity-name localization entries for all turret variants to ensure proper display in technology tooltips
+    - Rocket and tesla turret range research automatically loads when Space Age DLC is installed
+---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: 31. 01. 2026
   Bugfixes:
